Fixed wrong color for danger button

--- a/scss/partials/_basics.scss
+++ b/scss/partials/_basics.scss
@@ -112,7 +112,7 @@ button, .button {
   }
 
   &.danger {
-    @include button-blue;
+    @include button-red;
   }
 
   &.small {
